--- a/json/index.html
+++ b/json/index.html
@@ -83,7 +83,7 @@
         //     }, 5000);
         //     });
 
-            loadProduct();
+        setInterval(loadProduct, 200);  
 
     function loadProduct(){    
         $(document).ready(function() {
